<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/black">

    <data>
        <variable
            name="viewModel"
            type="com.example.geoguess.activities.CountryInfoViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".activities.HomePageActivity">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/backgroundMap"
            android:scaleType="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"/>

        <TextView
            android:id="@+id/textViewName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/geoguess"
            android:textColor="@color/white"
            android:textSize="50sp"
            android:textStyle="bold"
            android:typeface="serif"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/buttonInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="100sp"
            android:text="@string/info"
            android:textSize="30sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:typeface="serif"
            android:background="@color/no_color"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/buttonGuess" />

        <Button
            android:id="@+id/buttonGuess"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="100sp"
            android:text="@string/guess"
            android:textSize="30sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:typeface="serif"
            android:background="@color/no_color"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/buttonInfo"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnShowEverything"
            android:text="@string/all"
            android:textSize="30sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:typeface="serif"
            android:background="@color/no_color"
            android:layout_marginBottom="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@id/buttonGuess"
            app:layout_constraintEnd_toStartOf="@id/btnRank"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/btnRank"
            android:text="@string/ranking"
            android:textSize="30sp"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:typeface="serif"
            android:background="@color/no_color"
            android:layout_marginBottom="20sp"
            app:layout_constraintStart_toEndOf="@id/btnShowEverything"
            app:layout_constraintBottom_toTopOf="@id/buttonInfo"
            app:layout_constraintEnd_toEndOf="parent"/>

        <TextView
            android:id="@+id/apiResponse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@{viewModel.response}"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/buttonInfo" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>